# rift

./: .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yaml  rustfmt.toml
.github/workflows/: rust.yml
bot/: Cargo.toml
bot/enum_derive/: Cargo.toml
bot/enum_derive/src/: lib.rs
bot/lang/: Cargo.toml
bot/lang/benches/: lang.rs
bot/lang/enum_derive/: Cargo.toml
bot/lang/enum_derive/src/: lib.rs
bot/lang/expose_derive/: Cargo.toml
bot/lang/expose_derive/src/: lib.rs
bot/lang/src/: context.rs  error.rs  lang.lalrpop  lib.rs  program.rs
bot/lang/src/ast/: mod.rs
bot/lang/src/impls/: from.rs  lang_attr.rs  lang_index.rs  mod.rs  ops.rs  to_bool.rs
bot/model_derive/: Cargo.toml
bot/model_derive/src/: lib.rs
bot/src/: listener.rs  main.rs  types.rs
bot/src/commands/: help.rs  main.rs  mod.rs  odds.rs  revenue.rs  target.rs  toot.rs  who.rs
bot/src/consts/: embed.rs  enums.rs  mod.rs  pnw.rs  target.rs  target_rater.rs
bot/src/embeds/: core.rs  errors.rs  mod.rs  pnw.rs  revenue.rs  target.rs
bot/src/enums/: mention.rs  mod.rs  pnw.rs
bot/src/errors/: mod.rs  not_found.rs
bot/src/strings/: core.rs  errors.rs  mod.rs  pnw.rs  target.rs
bot/src/structs/: cache.rs  data.rs  flags.rs  lock.rs  mod.rs  resources.rs
bot/src/structs/db/: alliance.rs  city.rs  mention.rs  mod.rs  nation.rs  target_config.rs  target_rater.rs  tradeprice.rs  user.rs
bot/src/traits/: convert.rs  enum_.rs  mod.rs  model.rs  to_embed.rs
bot/src/utils/: convert.rs  embed.rs  mod.rs  money.rs  projects.rs
db/: package-lock.json  package.json
db/init/: 00-rift-init.sql  01-rift.sql
db/prisma/: schema.prisma
db/prisma/migrations/20220822033231_initial/: migration.sql
db/prisma/migrations/20221025024844_users_nation_id_to_int/: migration.sql
db/prisma/migrations/20221028171152_alliance_seniority_is_not_null/: migration.sql
db/prisma/migrations/20221029230834_no_last_active/: migration.sql
db/prisma/migrations/20221029231630_no_powered/: migration.sql
db/prisma/migrations/20221029233324_city_plurals/: migration.sql
db/prisma/migrations/20221029233848_plurals_take_two/: migration.sql
db/prisma/migrations/20221030065132_idk_whats_going_on/: migration.sql
db/prisma/migrations/20221030202602_trga/: migration.sql
db/prisma/migrations/20221106010556_account_subscriptions/: migration.sql
db/prisma/migrations/20221115144633_mentions_owner_type_is_not_optional/: migration.sql
db/prisma/migrations/20221115232716_add_defaults/: migration.sql
db/prisma/migrations/20221117042207_targets/: migration.sql
db/prisma/migrations/20221117042739_unique/: migration.sql
db/prisma/migrations/20221118153923_new_target_rater_fields/: migration.sql
db/prisma/migrations/20230617010556_project_bits/: migration.sql
db/prisma/migrations/20230702201206_add_tradeprices/: migration.sql
db/prisma/migrations/20230702202145_change_to_decimal_not_float_for_tradeprices/: migration.sql
web/: .eslintrc.json  .prettierrc  package-lock.json  package.json  remix.config.js  tsconfig.json  wrangler.toml
web/app/: entry.server.tsx  root.tsx
web/app/context/: Providers.tsx
web/app/hooks/: theme.tsx
web/app/types/: decimal.tsx  react.tsx
web/app/utils/: decimal.tsx
(+3 files in other folders)
