[package]
name = "rift-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28.2", features = ["rt-multi-thread"] }
poise = "0.5.5" 
dotenv = "0.15.0"
async-trait = "0.1.68"
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "postgres", "bigdecimal", "uuid", "time"] }
uuid = "1.3.3"
bigdecimal = "0.3.1"
dashmap = "5.4.0"
time = "0.3.22"
strum_macros = "0.24.3"
strum = "0.24.1"
url = "2.4.0"
paste = "1.0.12"
regex = "1.8.4"
lazy_static = "1.4.0"
const_format = "0.2.31"

model_derive = { path = "model_derive" }

[dependencies.serenity]
version = "0.11.5"
default-features = false
features = ["builder", "client", "gateway", "model", "utils", "collector"]

[dependencies.pnwkit]
version = "3.0.0-alpha.15"
features = ["async", "subscriptions", "uuid", "bigdecimal", "time"]
git = "https://github.com/mrvillage/pnwkit.git"
# path = "../../pnwkit/pnwkit-rs"

[dependencies.rift-lang]
version = "0.1.0"
git = "https://github.com/mrvillage/rift-lang.git"
# path = "../../rift-lang"

# [profile.dev.package.lang]
# opt-level = 1

# [profile.dev.build-override.lang]
# opt-level = 1
