[package]
name = "lang"
version = "0.1.0"
edition = "2021"

[build-dependencies]
lalrpop = "0.19.8"

[dependencies]
lalrpop-util = "0.19.8"
regex = "1"
dashmap = "5.3.4"
bigdecimal = "0.3.0"
time = "0.3.13"
expose_derive = { path = "expose_derive" }

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "lang"
harness = false
